net/quic/core/quic_connection.cc
@@ -313,6 +313,7 @@ QuicConnection::QuicConnection(
       stateless_reset_token_received_(false),
       received_stateless_reset_token_(0),
       last_control_frame_id_(kInvalidControlFrameId),
+      is_path_degrading_(false),
       negotiate_version_early_(
           GetQuicReloadableFlag(quic_server_early_version_negotiation)),
       always_discard_packets_after_close_(
@@ -320,7 +321,7 @@ QuicConnection::QuicConnection(
       handle_write_results_for_connectivity_probe_(GetQuicReloadableFlag(
           quic_handle_write_results_for_connectivity_probe)),
       use_path_degrading_alarm_(
-          GetQuicReloadableFlag(quic_path_degrading_alarm)),
+          GetQuicReloadableFlag(quic_path_degrading_alarm2)),
       enable_server_proxy_(GetQuicReloadableFlag(quic_enable_server_proxy)) {
   QUIC_DLOG(INFO) << ENDPOINT
                   << "Created connection with connection_id: " << connection_id
@@ -2111,9 +2112,9 @@ bool QuicConnection::WritePacket(SerializedPacket* packet) {
     // |retransmittable_on_wire_alarm_| to possibly send a PING.
     retransmittable_on_wire_alarm_->Cancel();
     if (use_path_degrading_alarm_) {
-      if (!path_degrading_alarm_->IsSet()) {
-        // This is the first retransmittable packet on the wire after having
-        // none on the wire. Start the path degrading alarm.
+      if (!is_path_degrading_ && !path_degrading_alarm_->IsSet()) {
+        // This is the first retransmittable packet on the working path.
+        // Start the path degrading alarm to detect new path degrading.
         SetPathDegradingAlarm();
       }
     }
@@ -2255,7 +2256,7 @@ void QuicConnection::OnCongestionChange() {
 }
 
 // TODO(b/77267845): remove this method once
-// FLAGS_quic_reloadable_flag_quic_path_degrading_alarm is deprecated.
+// FLAGS_quic_reloadable_flag_quic_path_degrading_alarm2 is deprecated.
 void QuicConnection::OnPathDegrading() {
   DCHECK(!use_path_degrading_alarm_);
   visitor_->OnPathDegrading();
@@ -2324,7 +2325,8 @@ void QuicConnection::SendAck() {
 }
 
 void QuicConnection::OnPathDegradingTimeout() {
-  QUIC_FLAG_COUNT_N(quic_reloadable_flag_quic_path_degrading_alarm, 2, 4);
+  QUIC_FLAG_COUNT_N(quic_reloadable_flag_quic_path_degrading_alarm2, 2, 5);
+  is_path_degrading_ = true;
   visitor_->OnPathDegrading();
 }
 
@@ -2529,7 +2531,7 @@ void QuicConnection::CancelAllAlarms() {
   mtu_discovery_alarm_->Cancel();
   retransmittable_on_wire_alarm_->Cancel();
   if (use_path_degrading_alarm_) {
-    QUIC_FLAG_COUNT_N(quic_reloadable_flag_quic_path_degrading_alarm, 4, 4);
+    QUIC_FLAG_COUNT_N(quic_reloadable_flag_quic_path_degrading_alarm2, 5, 5);
     path_degrading_alarm_->Cancel();
   }
 }
@@ -2673,7 +2675,7 @@ void QuicConnection::SetRetransmissionAlarm() {
 
 void QuicConnection::SetPathDegradingAlarm() {
   DCHECK(use_path_degrading_alarm_);
-  QUIC_FLAG_COUNT_N(quic_reloadable_flag_quic_path_degrading_alarm, 1, 4);
+  QUIC_FLAG_COUNT_N(quic_reloadable_flag_quic_path_degrading_alarm2, 1, 5);
   const QuicTime::Delta delay = sent_packet_manager_.GetPathDegradingDelay();
   path_degrading_alarm_->Update(clock_->ApproximateNow() + delay,
                                 QuicTime::Delta::FromMilliseconds(1));
@@ -3254,13 +3256,16 @@ void QuicConnection::PostProcessAfterAckFrame(bool send_stop_waiting,
     // There are no retransmittable packets on the wire, so it's impossible to
     // say if the connection has degraded.
     if (use_path_degrading_alarm_) {
-      QUIC_FLAG_COUNT_N(quic_reloadable_flag_quic_path_degrading_alarm, 3, 4);
+      QUIC_FLAG_COUNT_N(quic_reloadable_flag_quic_path_degrading_alarm2, 3, 5);
       path_degrading_alarm_->Cancel();
     }
   } else if (acked_new_packet) {
     // A previously-unacked packet has been acked, which means forward progress
-    // has been made. Push back the path degrading alarm.
+    // has been made. Unset |is_path_degrading| if the path was considered as
+    // degrading previously. Set/update the path degrading alarm.
     if (use_path_degrading_alarm_) {
+      QUIC_FLAG_COUNT_N(quic_reloadable_flag_quic_path_degrading_alarm2, 4, 5);
+      is_path_degrading_ = false;
       SetPathDegradingAlarm();
     }
   }
